--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <h1>Transformers: Rise of the Beasts</h1>
  <p>#Transformers  #OptimusPrime</p>   <p>#Classificação A13</p>
  <p>#Ação</p>  
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/itnqEauWQZM?si=yLcfauKUmCG4vLr7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+ <p>#Durante os anos 90, uma nova facção de Transformers - os Maximals - se junta aos Autobots como aliados na batalha pela Terra.
+Retornando à ação e ao espetáculo que capturaram os espectadores ao redor do mundo, Transformers: Rise of the Beasts levará o público a uma aventura globetrotting dos anos 90 com os Autobots e apresentará uma nova facção de Transformers - os Maximals - para se juntar a eles como aliados na batalha existente pela Terra. Dirigido por Steven Caple Jr. e estrelado por Anthony Ramos e Dominique Fishback.</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/itnqEauWQZM?si=yLcfauKUmCG4vLr7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
   
 
@@ -20,7 +22,8 @@
    <h1>Mufasa: O Rei Leão</h1>
 <p>#Savana-Africana</p>   <p>#Classificação L</p>
 <p>#Família</p>   
-<iframe width="560" height="315" src="https://www.youtube.com/embed/AiauV09fK1U?si=0IAdKAXDfMb3d1-_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<p>#Mufasa, um filhote órfão, perdido e sozinho, conhece um simpático leão chamado Taka, herdeiro de uma linhagem real. O encontro ao acaso dá início a uma grande jornada de um grupo extraordinário de deslocados em busca de seu destino, além de revelar a ascensão de um dos maiores reis das Terras do Orgulho.</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/AiauV09fK1U?si=0IAdKAXDfMb3d1-_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
 
@@ -29,9 +32,10 @@
 
 
     <h1>Minions 2: A Origem de Gru</h1>
-   <p>#Família</p>  <p>#Classificação L</p>
-   <p>#Comédia</p>  
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/oLCeh_pqjes?si=MOIsboMbgw4ZTrc-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+ <p>#Família, Comédia)</p>  <p>#Classificação L</p>
+   
+   <p>#Nos anos 1970, o jovem Gru tenta entrar para um time de supervilões, mas a entrevista é desastrosa e ele e seus minions acabam fugindo do grupo de mal-feitores.</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/oLCeh_pqjes?si=MOIsboMbgw4ZTrc-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
 
